--- a/index.html
+++ b/index.html
@@ -392,15 +392,15 @@
               </div>
               <div class="back">
                 <h5><b>Roger Edwin Fernandez Bernal</b></h5>
-                Director Médico Nacional “Medizen” <br>
-                Especialista en Nutriologia Clínica con Práctica Ortomolecular Titulación<br>
-                Válida en Lic. En Medicina Madrid- España Diplomado en Farmacología<br>
-                Miembro Honorario Sociedad Colombiana de Apiterapia <br>
-                Médico Egresado de la Facultad de Medicina Universidad Privada del Valle <br>
-                Estudios de actualización con la Sociedad Colombiana de Apiterapia.<br>
-                Socio de SENMO Sociedad Española de Nutrición y Medicina Ortomolecular<br>
-                Actualmente cursa el Master de Nutrición, Medicina y Práctica<br>
-                Ortomolecular 2019-2020 avalado por la SENMO y FAPES.
+                Director Médico Nacional "Medizen"<br>
+                Egresado de la Facultad de Medicina<br> Universidad Privada del Valle CBBA<br>
+                Titulación Convalidado como Lic. en<br> Medicina Madrid-España<br>
+                Especialista en Nutriología Clínica con<br> Práctica Ortomolecular UAGRM<br>
+                Diplomado en Farmacología Univalle<br>
+                Miembro Honorario Sociedad<br> Colombiana de Apiterapia<br>
+                Socio de SENMO<br> Sociedad Española de Nutrición y Medicina Ortomolecular<br>
+                Curso de actualización con la Sociedad<br> Colombiana de Apiterapia
+                Actualmente<br> cursa el Master de Nutrición,Medicina y<br> Práctica Ortomolecular 2019-2020<br> avalado por la SENMO Y FAPES.
               </div>
             </div>
           </div>
@@ -465,20 +465,20 @@
               </div>
               <div class="back">
                 <h5><b>Dra. Ingrid Noelia Estrada Benavidez</b></h5>
-                Médico Regional "Potosi" <br>
-                Egresada de la Facultad de Medicina de la Universidad autónoma Tomás frías
+                Médico Cirujana<br>
+                Egresada de la Facultad de<br> Medicina de la Universidad autónoma<br> Tomás frías Potosí<br>
 
-                SEGURO UNIVERSITARIO NUESTRA SEÑORA DE LA PAZ 2015
-                Atención sanitaria inmediata a pacientes graves
+                Seguro Nuestra Señora de La Paz 2015<br>
+                Atención Sanitaria inmediata<br> a pacientes graves<br>
 
-                HOSPITAL DE CLINICAS UNIVERSITARIO 2017
-                asistencia de casos de Emergencias geriátricas, control de pacientes con<br> enfermedades crónicas<br>
+                Hospital de Clínicas Universitario 2017<br>
+                asistencia de casos de<br> Emergencias geriátricas, control<br> de pacientes con<br> enfermedades crónicas<br>
 
-                CLINICA CRUZ DEL SUR 2018
-                Atención primaria de salud y Emergencias médicas
-                Jefatura médica
+                Clinica Cruz del Sur 2018<br>
+                Atención primaria de salud y<br> Emergencias médicas
+                Jefatura médica<br>
 
-                CURSOS DE ACTUALIZACIÓN DE LA SOCIEDAD COLOMBIANA DE APITERAPIA
+                Actualmente realza Capacitación<br> Continua con la Sociedad Colombiana<br> de Apiterapia
               </div>
             </div>
           </div>
@@ -490,10 +490,10 @@
               </div>
               <div class="back">
                 <h5><b>Dra. Flavia Silvana Jaldin Garnica</b></h5>
-                Médico Cirujano Egresada de la Facultad de Medicina UPAL<br>
-                Diplomado en Ecografía General 
+                Médico Cirujana<br> Egresada de la Facultad de Medicina<br> UPAL<br>
+                Diplomado en Ecografía General<br>
                 Universidad Técnica de Oruro<br>
-                Actualmente capacitación continua<br> con la Sociedad Colombiana de Apiterapia.
+                Actualmente<br> capacitación continua con la<br> Sociedad Colombiana de Apiterapia.
               </div>
             </div>
           </div>
