--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                   Av. Villazon #242 entre<br>
                   San Alberto y w. Alba . <br>
                   Zona Ferroviaria Edif. <br>
-                  Salinas 2Do piso ofc. 23
+                  Salinas 3er piso ofc. 35
                 </div><br>
                 <div class="tipografia_2"><i class="fa fa-phone"></i> (591) 79359492 </div><br><br>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3759.0575031094095!2d-65.76015758509097!3d-19.58203698679964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f94e744cb28e51%3A0x146e6ec977fd37d7!2sVillaz%C3%B3n+242%2C+Villa+Imperial+de+Potos%C3%AD!5e0!3m2!1ses-419!2sbo!4v1549918007298" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>      
