--- a/index.html
+++ b/index.html
@@ -660,13 +660,12 @@
               <h3 class="tipografia_3">Oruro</h3>
               <div class="tipografia_2">
                 &nbsp;<br>
-                Avenida España #640 entre<br> 
-                Soria Galvarro y La Plata<br>
-                &nbsp;<br>
+                Calle Bolívar #1641 esq.<br> 
+                Petot (a 3 cuadras de la plaza Principal)<br>
                 &nbsp;
               </div><br>
               <div class="tipografia_2"><i class="fa fa-phone"></i> (591) 79359492 </div><br><br>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3794.9458682082113!2d-67.11978078511528!3d-17.98125528772521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e2b1578bffcd1d%3A0xedfdfa686d0e5a54!2sMedizen+Oruro!5e0!3m2!1ses-419!2sbo!4v1539353141384" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>        
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.205032150599!2d-67.12007298511536!3d-17.96919548773244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e2b0bd8058e975%3A0x35cde6b432787ce5!2sBol%C3%ADvar+%26+Petot%2C+Oruro!5e0!3m2!1ses-419!2sbo!4v1562552034931!5m2!1ses-419!2sbo"" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>        
               <br><br>
             </div>
           </div>
@@ -686,6 +685,21 @@
                 <br><br>
                 <img src="img/laterales.png" style="width: 2px; height: 300px; position: absolute; top: -10px; margin-left: 170px;">
             </div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+                <h3 class="tipografia_3">Sucre</h3>
+                <div class="tipografia_2">
+                  &nbsp;<br>
+                  Calle Junín #312 entre<br>
+                  Hernando Siles y Urcullo<br>
+                  Galería Tetra Mall. <br>
+                  2do Piso of 35 <br>
+				  &nbsp;
+                </div><br>
+                <div class="tipografia_2"><i class="fa fa-phone"></i> (591) 69669787 </div><br><br>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.458928904506!2d-65.26037328509923!3d-19.043549587106565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93fbcf34f0bbf077%3A0x46f8dbb512971155!2sTerra+Mall!5e0!3m2!1ses-419!2sbo!4v1562552580484!5m2!1ses-419!2sbo" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>      
+                <br><br>
+                <img src="img/laterales.png" style="width: 2px; height: 300px; position: absolute; top: -10px; margin-left: 170px;">
+			</div>
           </div>
         </div>
       </div>
@@ -763,6 +777,21 @@
                 </div><br>
                 <div class="tipografia_2"><i class="fa fa-phone"></i> (591) 79359492 </div><br><br>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3759.0575031094095!2d-65.76015758509097!3d-19.58203698679964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f94e744cb28e51%3A0x146e6ec977fd37d7!2sVillaz%C3%B3n+242%2C+Villa+Imperial+de+Potos%C3%AD!5e0!3m2!1ses-419!2sbo!4v1549918007298" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>      
+                <br><br>
+                <img src="img/laterales.png" style="width: 2px; height: 450px; position: absolute; top: -10px; margin-left: 170px;">
+        </div>
+		<br><br>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+                <h3 class="tipografia_3">Sucre</h3>
+                <div class="tipografia_2">
+                  &nbsp;<br>
+                  Calle Junín #312 entre<br>
+                  Hernando Siles y Urcullo<br>
+                  Galería Tetra Mall. <br>
+                  2do Piso of 35
+                </div><br>
+                <div class="tipografia_2"><i class="fa fa-phone"></i> (591) 69669787 </div><br><br>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.458928904506!2d-65.26037328509923!3d-19.043549587106565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93fbcf34f0bbf077%3A0x46f8dbb512971155!2sTerra+Mall!5e0!3m2!1ses-419!2sbo!4v1562552580484!5m2!1ses-419!2sbo" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>      
                 <br><br>
                 <img src="img/laterales.png" style="width: 2px; height: 450px; position: absolute; top: -10px; margin-left: 170px;">
         </div>
