--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                   &nbsp;<br>
                   Calle Junín #312 entre<br>
                   Hernando Siles y Urcullo<br>
-                  Galería Tetra Mall. <br>
+                  Galería Terra Mall. <br>
                   2do Piso of 35 <br>
 				  &nbsp;
                 </div><br>
