--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       </div>
       <div class="div_espacio"><br></div>
       <div class="col-sm-6 associate-logo">
-        <a href="http://apizenbolivia.com/" target="_blank"> <img src="img/logo-apizen.png" alt="apizenbolivia"> </a>
+        <a href="https://www.senmo.org/" target="_blank"> <img src="img/senmo.png" alt="senmo"> </a>
       </div>
     </div>
   </section>
