--- a/index.html
+++ b/index.html
@@ -487,6 +487,24 @@
                 </div>
               </div>
             </div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+              <div id="card12" class="card">
+              <div class="front">
+                <span><img src="img/Dr_Sucre.png" style="width:80%; height:auto;" class="img-responsive center-block" alt=""></span>
+                <span></span>
+              </div>
+                <div class="back">
+                  <h5><b>Dra. Fátima Estrada Benavídez</b></h5>
+                  Médico Cirujano<br>
+                  Egresada de la Facultad de Medicina<br>
+
+                  Universidad Autónoma Tomás Frías.<br>
+
+                  Cursos de actualización médica.<br>
+				  Capacitación continua con la Sociedad Colombiana de Apiterapia.
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -599,6 +617,24 @@
                 </div>
               </div>
             </div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+              <div id="card13" class="card">
+              <div class="front">
+                <span><img src="img/Dr_Sucre.png" style="width:80%; height:auto;" class="img-responsive center-block" alt=""></span>
+                <span></span>
+              </div>
+                <div class="back">
+                  <h5><b>Dra. Fátima Estrada Benavídez</b></h5>
+                  Médico Cirujano<br>
+                  Egresada de la Facultad de Medicina<br>
+
+                  Universidad Autónoma Tomás Frías.<br>
+
+                  Cursos de actualización médica.<br>
+				  Capacitación continua con la Sociedad Colombiana de Apiterapia.
+                </div>
+              </div>
+            </div>
       </div>
     </div>
   </section>
@@ -691,7 +727,7 @@
                   &nbsp;<br>
                   Calle Junín #312 entre<br>
                   Hernando Siles y Urcullo<br>
-                  Galería Terra Mall. <br>
+                  Galería Tetra Mall. <br>
                   2do Piso of 35 <br>
 				  &nbsp;
                 </div><br>
@@ -855,6 +891,7 @@
       $("#card10").flip();
       $("#card11").flip();
       $("#card12").flip();
+	  $("#card13").flip();
       $('.popup-with-move-anim').magnificPopup({
     		type: 'inline',
 
