--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
               </div>
             </div>
 			<div class="col-lg-3 col-md-4 col-sm-6">
-              <div id="card12" class="card">
+              <div id="card14" class="card">
               <div class="front">
                 <span><img src="img/Dr_Sucre.png" style="width:80%; height:auto;" class="img-responsive center-block" alt=""></span>
                 <span></span>
@@ -892,6 +892,7 @@
       $("#card11").flip();
       $("#card12").flip();
 	  $("#card13").flip();
+	  $("#card14").flip();
       $('.popup-with-move-anim').magnificPopup({
     		type: 'inline',
 
