--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
         <div class="plomo_arriba2"></div>
           <div class="rect_med2 rec">
             <div class="rec_text div2">
-          <p class="tipografia_10">Nuestra&nbsp;&nbsp; presencia&nbsp; en las ciudades de Santa Cruz,&nbsp; La paz,&nbsp;&nbsp;&nbsp; Cochabamba&nbsp; y Oruro&nbsp;&nbsp; hace&nbsp;&nbsp;&nbsp;&nbsp; mas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; solido&nbsp;&nbsp;&nbsp;&nbsp; nuestro compromiso&nbsp;&nbsp; de&nbsp;&nbsp; mejorar&nbsp; ¡La calidad de&nbsp;&nbsp; vida&nbsp;&nbsp;&nbsp;&nbsp; de&nbsp;&nbsp;&nbsp;&nbsp; nuestros&nbsp;&nbsp;&nbsp;&nbsp; pacientes!</p>
+          <p class="tipografia_10">Nuestra&nbsp;&nbsp; presencia&nbsp; en las ciudades de Santa Cruz,&nbsp; La paz,&nbsp;&nbsp;&nbsp; Cochabamba,&nbsp; Oruro,&nbsp;&nbsp;Potosí y Sucre hace&nbsp;&nbsp;&nbsp;&nbsp; mas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; solido&nbsp;&nbsp;&nbsp;&nbsp; nuestro compromiso&nbsp;&nbsp; de&nbsp;&nbsp; mejorar&nbsp; ¡La calidad de&nbsp;&nbsp; vida&nbsp;&nbsp;&nbsp;&nbsp; de&nbsp;&nbsp;&nbsp;&nbsp; nuestros&nbsp;&nbsp;&nbsp;&nbsp; pacientes!</p>
             </div>
             <div class="rec_text div02" align="center">
-          <p class="tipografia_10">Nuestra presencia en las ciudades de Santa Cruz, La paz, Cochabamba y Oruro hace mas solido nuestro compromiso de mejorar ¡La calidad de vida de nuestros pacientes!</p>
+          <p class="tipografia_10">Nuestra presencia en las ciudades de Santa Cruz, La paz, Cochabamba, Oruro, Potosí y Sucre hace mas solido nuestro compromiso de mejorar ¡La calidad de vida de nuestros pacientes!</p>
             </div>
           </div>        
         <!--<img src="img/icon-centro-medico.png" class="img-responsive center-block" alt="">
