--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         counter-increment: gallery-cell;
       }
     </style>
+<!-- google adsense-->
+  <script data-ad-client="ca-pub-1260709818438911" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
