--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <div class="col-md-6" align="center"> 
         <a class="popup-with-move-anim" href="#apiterapia-popup">       
           <p>
-            <img src="img/Apiterapia-Icon-Medizen.png" class="img-responsive center-block service-icon" alt="Apiterapia"><br>
+            <img src="img/Apiterapia.png" class="img-responsive center-block service-icon" alt="Apiterapia"><br>
             <span class="service-name tipografia_6">Apiterapia</span>
           </p>
           </a>
