update Dr sucre
cambio de Dr

--- a/index.html
+++ b/index.html
@@ -538,18 +538,21 @@
 			<div class="col-lg-3 col-md-4 col-sm-6">
               <div id="card14" class="card">
               <div class="front">
-                <span><img src="img/Dr_Sucre.png" style="width:80%; height:auto;" class="img-responsive center-block" alt=""></span>
+                <span><img src="img/Dr_Juan-Pablo-Zanabria-Ch.png" style="width:80%; height:auto;" class="img-responsive center-block" alt=""></span>
                 <span></span>
               </div>
                 <div class="back">
-                  <h5><b>Dra. Fátima Estrada Benavídez</b></h5>
+                  <h5><b>Dra. Juan Pablo Zanabria</b></h5>
                   Médico Cirujano<br>
-                  Egresada de la Facultad de Medicina<br>
+                  Egresado de la Universidad San Francisco Xavier Chuquisaca<br>
 
-                  Universidad Autónoma Tomás Frías.<br>
+                  Diplomado en Salud pública mención epidemiología Jefatura médica<br>
 
-                  Cursos de actualización médica.<br>
-				  Capacitación continua con la Sociedad Colombiana de Apiterapia.
+                  y Director en  Centro de salud Integral en Municipio de Sucre<br>
+		  Organizador de seminario taller de gestión de<br>
+		  la calidad y acreditación de establecimientos de<br>
+		  salud por SEDES Chuquisaca<br>
+		  Miembro Regular de la Sociedad Colombiana de Apiterapia.
                 </div>
               </div>
             </div>
