--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <div class="row">
       <h2 class="headerline-green green tipografia_10">NUESTROS ASOCIADOS</h2><br>
       <div class="col-sm-6 associate-logo">
-        <a href="http://apiterapia.com.co/" target="_blank"> <img src="img/logo-colombia.png" alt="apiterapia"> </a>
+        <a href="http://apiterapia.com.co/" target="_blank"> <img src="img/logo-colombia3.png" alt="apiterapia"> </a>
       </div>
       <div class="div_espacio"><br></div>
       <div class="col-sm-6 associate-logo">
